Added theory manual from overleaf

--- a/docs/theorymanual/main.tex
+++ b/docs/theorymanual/main.tex
@@ -4,6 +4,7 @@
 %\usepackage[T1]{fontenc}
 \usepackage{acronym}
 \usepackage{amsmath}
+\usepackage{amssymb}
 %\usepackage{array}
 \usepackage[blocks]{authblk}
 %\usepackage{booktabs}
@@ -46,9 +47,9 @@
 \usepackage{booktabs}
 \usepackage{titlesec}
 
-\title{THOR User's Manual}
+\title{THOR Theory Manual}
 \newcommand{\subtitle}{}
-\newcommand{\shortTitle}{THOR User's Manual}
+\newcommand{\shortTitle}{THOR Theory Manual}
 \author[1]{Nicholas Herring}
 \author[1]{Yousry Azmy}
 \author[2]{Sebastian Schunert}
@@ -176,21 +177,13 @@ contents={%
 
 The purpose of the User Manual is to provide the novice user with the necessary instructions to install, compile, and execute the Tetrahedral-grid High Order Radiation (THOR) transport code.
 
-\chapter{System Requirements}
+\chapter{Introduction}
 
-\input{chapters/systemrequirements/main.tex}
+\input{chapters/introduction/main.tex}
 
-\chapter{Getting Started}
+\chapter{Theory}
 
-\input{chapters/gettingstarted/main.tex}
-
-\chapter{Godiva Tutorial}
-
-\input{chapters/godivatutorial/main.tex}
-
-\chapter{Input Format}
-
-\input{chapters/inputformat/main.tex}
+\input{chapters/theory/main.tex}
 
 
 \bibliographystyle{plain}
