Added developer's manual. Currently empty

--- a/docs/developermanual/main.tex
+++ b/docs/developermanual/main.tex
@@ -47,9 +47,9 @@
 \usepackage{booktabs}
 \usepackage{titlesec}
 
-\title{THOR Theory Manual}
+\title{THOR Developer's Manual}
 \newcommand{\subtitle}{}
-\newcommand{\shortTitle}{THOR Theory Manual}
+\newcommand{\shortTitle}{THOR Developer's Manual}
 \author[1]{Nicholas Herring}
 \author[1]{Yousry Azmy}
 \author[2]{Sebastian Schunert}
@@ -175,13 +175,13 @@ contents={%
 \pagenumbering{arabic}
 \pagestyle{fancy}
 
-\chapter{Introduction}
+\chapter{Call Chart}
 
-\input{chapters/introduction/main.tex}
+\input{chapters/callchart/main.tex}
 
-\chapter{Theory}
+\chapter{Style Guide}
 
-\input{chapters/theory/main.tex}
+\input{chapters/styleguide/main.tex}
 
 
 \bibliographystyle{plain}
