Finished pre-tutorial work

--- a/docs/usermanual/main.tex
+++ b/docs/usermanual/main.tex
@@ -184,9 +184,9 @@ The purpose of the User Manual is to provide the novice user with the necessary 
 
 \input{chapters/gettingstarted/main.tex}
 
-\chapter{Godiva Tutorial}
+\chapter{Tutorials}
 
-\input{chapters/godivatutorial/main.tex}
+\input{chapters/tutorials/main.tex}
 
 \chapter{Input Format}
 
