Output description completed

--- a/docs/usermanual/main.tex
+++ b/docs/usermanual/main.tex
@@ -184,13 +184,17 @@ The purpose of the User Manual is to provide the novice user with the necessary 
 
 \input{chapters/gettingstarted/main.tex}
 
-\chapter{Tutorials}
+\chapter{Tutorials}\label{ch:tutorials}
 
 \input{chapters/tutorials/main.tex}
 
 \chapter{Input Format}
 
 \input{chapters/inputformat/main.tex}
+
+\chapter{Output Format}
+
+\input{chapters/outputformat/main.tex}
 
 
 \bibliographystyle{plain}
