Fixed references and citations

--- a/docs/usermanual/biblio.bib
+++ b/docs/usermanual/biblio.bib
@@ -2,10 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Ade, Brian J. at 2011-09-20 09:06:41 -0400 
+%% Created for Ade, Brian J. at 2011-09-20 09:06:41 -0400
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 
@@ -24,7 +24,7 @@
 	Title = {Arbitrarily High Order Characteristic Methods for Solving the Neutron Transport Equation},
 	Volume = {19},
 	Year = {1992}}
-	
+
 @article{Ferrer2012,
 	Author = {Ferrer, R. M. and Azmy, Y. Y.},
 	Journal = {Nuclear Science and Engineering},
@@ -32,7 +32,7 @@
 	Title = {A Robust Arbitrarily High-Order Transport Method of the Characteristic Type for Unstructured Grids},
 	Volume = {172},
 	Year = {2012}}
-	
+
 @article{Azmy1988a,
 	Author = {Azmy, Y. Y.},
 	Journal = {Nuclear Science and Engineering},
@@ -40,9 +40,9 @@
 	Title = {The Weighted Diamond Difference Form of Nodal Transport Methods},
 	Volume = {98},
 	Year = {1988}}
-	
+
 @phdthesis{FerrerPhD,
-  Author       = {Ferrer, R. M.}, 
+  Author       = {Ferrer, R. M.},
   Title        = {An Arbitrarily High Order Transport Method of the Characteristic Type for Unstructured Tetrahedral Grids},
   School       = {The Pennsylvania State University},
   Year         = 2010,
@@ -61,13 +61,13 @@
 	Title = {A review of neutron transport approximations},
 	Volume = {80},
 	Year = {1982}}
-	
+
 @inproceedings{Ferrer2009,
 	Author = {Ferrer, R. M. and Azmy, Y. Y.},
 	Title = {A robust arbitrarily high order transport method of the characteristic type for unstructured tetrahedral grids},
     organization={International Topical Meeting on Mathematics, Computational Methods and Reactor Physics, American Nuclear Society},
     year={2009}}
-    
+
 @inproceedings{Larsen1981,
 	Author = {Larsen, E. W. and Alcouffe, R. E.},
 	Title = {The linear characteristic method for spatially discretizing the discrete-ordinates equations in (x,y)-geometry},
@@ -91,7 +91,7 @@
 	Pages = {41},
 	Volume = {162},
 	Year = {2009}}
-	
+
 @article{Lathrop1969,
 	Author = {Lathrop, K. D.},
 	Journal = {Journal of Computational Physics},
@@ -99,7 +99,7 @@
 	Pages = {475–498},
 	Volume = {4},
 	Year = {1969}}
-	
+
 @article{Schunert2015,
 	Author = {Schunert, Sebastian and Azmy, Yousry Y. },
 	Journal = {Nuclear Science and Engineering},
@@ -122,7 +122,7 @@ geometries},
 	Title = {The slice balance approach (SBA): A characteristic-based, multiple balance SN approach on unstructured polyhedral meshes},
     organization={Joint International Topical Meeting on Mathematics and Computations, Supercomputing, Reactor Physics and Nuclear and Biological Applications, American Nuclear Society},
 	year={2005}}
-	
+
 @article{Miller1996,
 	Author = {Miller, D. J. and Mathews, K. A. and Brennan, C. R.},
 	Journal = {Transport Theory and Statistical Physics},
@@ -152,7 +152,7 @@ geometries},
 	Title = {Computational Methods of Neutron Transport},
     Publisher = {American Nuclear Society, La Grange Park, Illinois},
 	Year = {1993}}
-	
+
 @article{Wang2009,
 	Author = {Wang, Y. and Ragusa, J. C.},
 	Journal = {Annals of Nuclear Energy},
@@ -168,8 +168,8 @@ geometries},
 	Pages = {298-333},
 	Volume = {137},
 	Year = {2001}}
-	
- 
+
+
  @techreport{Godiva1961,
      title = {Neutron tissue dose rate survey for the Godiva II critical assembly},
      author = {M.J. Engelke and E.A. Bemis Jr. and J.A. Sayeg},
@@ -199,13 +199,13 @@ year  = {1978},
 publisher = {Taylor & Francis},
 doi = {10.1080/18811248.1978.9733200},
 
-URL = { 
+URL = {
         https://www.tandfonline.com/doi/abs/10.1080/18811248.1978.9733200
-    
+
 },
-eprint = { 
+eprint = {
         https://www.tandfonline.com/doi/pdf/10.1080/18811248.1978.9733200
-    
+
 }
 }
 
@@ -236,5 +236,20 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/nme.2579},
 abstract = {Abstract Gmsh is an open-source 3-D finite element grid generator with a build-in CAD engine and post-processor. Its design goal is to provide a fast, light and user-friendly meshing tool with parametric input and advanced visualization capabilities. This paper presents the overall philosophy, the main design choices and some of the original algorithms implemented in Gmsh. Copyright © 2009 John Wiley \& Sons, Ltd.},
 year = {2009}
 }
+
+@techreport{BeRP_report,
+	Author = {Mattingly, John},
+	Date-Added = {2009-09},
+	Date-Modified = {2012-07},
+	Institution = {Sandia National Laboratories},
+	Number = {SAND2009-5804},
+	Title = {Polyethylene-Reflected Plutonium Metal Sphere: Subcritical Neutron and Gamma Measurements},
+	Year = {2009}}
+
+@book{reference_manual,
+	Author = {Herring, N. F. and others },
+	Title = {THOR Theory Manual},
+    Publisher = {North Carolina State University, Raleigh, North Carolina},
+	Year = {2022}}
 
 
