--- a/docs/usermanual/main.tex
+++ b/docs/usermanual/main.tex
@@ -174,7 +174,7 @@ contents={%
 \pagenumbering{arabic}
 \pagestyle{fancy}
 
-The purpose of the User Manual is to provide the novice user with the necessary instructions to install, compile, and execute the Tetrahedral-grid High Order Radiation (THOR) transport code.
+The purpose of the User Manual is to provide the novice user with the necessary instructions to install, compile, and execute the \ac{THOR}.
 
 \chapter{System Requirements}
 
