--- a/docs/usermanual/acronym.tex
+++ b/docs/usermanual/acronym.tex
@@ -1,2 +1,8 @@
 \begin{acronym}
+\acro{THOR}{\textit{TetraHedral-grid High Order Radiation (transport code)}}
+\acro{MPI}{\textit{Message Passing Interface}}
+\acro{NCSU}{\textit{North Carolina State University}}
+\acro{LAPACK}{\textit{Linear Algebra PACKage}}
+\acro{HDPE}{\textit{High Density PolyEthylene}}
+\acro{GUI}{\textit{Graphical User Interface}}
 \end{acronym}
