xsConverter description added to user manual tex files

--- a/docs/usermanual/acronym.tex
+++ b/docs/usermanual/acronym.tex
@@ -5,4 +5,5 @@
 \acro{LAPACK}{\textit{Linear Algebra PACKage}}
 \acro{HDPE}{\textit{High Density PolyEthylene}}
 \acro{GUI}{\textit{Graphical User Interface}}
+\acro{XS}{\textit{Cross Section}}
 \end{acronym}
