--- a/docs/theorymanual/main.tex
+++ b/docs/theorymanual/main.tex
@@ -51,17 +51,17 @@
 \newcommand{\subtitle}{}
 \newcommand{\shortTitle}{THOR Theory Manual}
 \author[1]{Nicholas Herring}
-\author[1]{Yousry Azmy}
-\author[2]{Sebastian Schunert}
-\author[3]{Raffi Yessayan}
+\author[2]{Raffi Yessayan}
+\author[3]{Sebastian Schunert}
 \author[4]{Rodolfo Ferrer}
+\author[1]{Yousry Azmy}
 
 \affil[1]{North Carolina State University}
-\affil[2]{Idaho National Laboratory}
-\affil[3]{Los Alamos National Laboratory}
+\affil[2]{Los Alamos National Laboratory}
+\affil[3]{Idaho National Laboratory}
 \affil[4]{Studsvik Scandpower}
 
-\newcommand{\publicationDate}{03/16/2022}
+\newcommand{\publicationDate}{06/09/2022}
 
 
 %customize hyperref
@@ -87,16 +87,16 @@
 \renewcommand{\headrulewidth}{0pt}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[LO,RE]{\includegraphics[width=1.15in]{template/NCSU_logo.png}}
+\fancyhead[LO,RE]{\includegraphics[width=1.15in]{../template/NCSU_logo.png}}
 \fancyhead[RO,LE]{\color{white}\shortTitle}
-\fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Radiation Transport Group}
+\fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Nuclear Computational Science Group}
 \fancyfoot[CO,CE]{\thepage}
 
 \fancypagestyle{plain}
 {
-\fancyhead[LO,RE]{\includegraphics[width=1.15in]{template/NCSU_logo.png}}
+\fancyhead[LO,RE]{\includegraphics[width=1.15in]{../template/NCSU_logo.png}}
 \fancyhead[RO,LE]{\color{NCSURed}\shortTitle}
-\fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Radiation Transport Group}
+\fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Nuclear Computational Science Group}
 \fancyfoot[CO,CE]{\thepage}
 }
 
@@ -114,7 +114,7 @@ color=black,
 opacity=1.0,
 angle=0,
 contents={%
-  \includegraphics[width=\paperwidth,height=\paperheight]{template/NCSU_background.pdf}
+  \includegraphics[width=\paperwidth,height=\paperheight]{../template/NCSU_background.pdf}
   }%
 }
 
