--- a/docs/theorymanual/title.tex
+++ b/docs/theorymanual/title.tex
@@ -2,13 +2,13 @@
 
    \BgThispage
    \thispagestyle{firststyle}
-   
+
    \vspace*{\fill}
-   
+
    \begin{minipage}[l][][c]{0.6\textwidth}
    \begin{flushleft}
    \makeatletter
-   {\huge\color{TitleRed}\bf NC State University - Radiation Transport \\ Group}\\
+   {\huge\color{TitleRed}\bf NC State University - Nuclear Computational \\ Science Group}\\
    \vspace{3cm}
    {\huge\fontfamily{phv}\selectfont\color{TitleRed}\bf
    % Title of the document
@@ -21,23 +21,23 @@
    % Authors
    {\Large\bf\setlength{\parskip}{10pt}
    \@author
-   
+
    }
    \vspace*{30pt}
    {\huge\bf
    \publicationDate
    }
    \makeatother
-   
-   
+
+
    \end{flushleft}
    \end{minipage}
-   
+
    \vspace*{\fill}
 
 \vspace{1cm}
 
-   
+
    \end{titlepage}
 
    \pagestyle{fancy}
@@ -58,9 +58,9 @@
    \bottomrule
    \end{tabular}
    \end{table}
-   
+
    \vspace*{\fill}
 
    \captionsetup{justification=justified}
-   
+
    \vspace*{\fill}
