--- a/docs/usermanual/main.tex
+++ b/docs/usermanual/main.tex
@@ -86,14 +86,14 @@
 \renewcommand{\headrulewidth}{0pt}
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[LO,RE]{\includegraphics[width=1.15in]{template/NCSU_logo.png}}
+\fancyhead[LO,RE]{\includegraphics[width=1.15in]{../template/NCSU_logo.png}}
 \fancyhead[RO,LE]{\color{white}\shortTitle}
 \fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Nuclear Computational Science Group}
 \fancyfoot[CO,CE]{\thepage}
 
 \fancypagestyle{plain}
 {
-\fancyhead[LO,RE]{\includegraphics[width=1.15in]{template/NCSU_logo.png}}
+\fancyhead[LO,RE]{\includegraphics[width=1.15in]{../template/NCSU_logo.png}}
 \fancyhead[RO,LE]{\color{NCSURed}\shortTitle}
 \fancyfoot[LE,RO]{\textcolor{NCSURed}{NCSU} Nuclear Computational Science Group}
 \fancyfoot[CO,CE]{\thepage}
@@ -113,7 +113,7 @@ color=black,
 opacity=1.0,
 angle=0,
 contents={%
-  \includegraphics[width=\paperwidth,height=\paperheight]{template/NCSU_background.pdf}
+  \includegraphics[width=\paperwidth,height=\paperheight]{../template/NCSU_background.pdf}
   }%
 }
 
