Finished Herring's review of theory intro

--- a/docs/theorymanual/acronym.tex
+++ b/docs/theorymanual/acronym.tex
@@ -1,2 +1,15 @@
 \begin{acronym}
+    \acro{THOR}{\textit{TetraHedral-grid High Order Radiation transport code}}
+    \acro{AHOT}{\textit{Arbitrarily High Order Transport}}
+    \acro{AHOT-C}{\textit{Arbitrarily High Order Transport method of the Characteristic type}}
+    \acro{AHOT-N}{\textit{Arbitrarily High Order Transport method of the Nodal type}}
+    \acro{AHOT-C-UG}{\textit{Arbitrarily High Order Transport method of the Characteristic type on Unstructured Grids}}
+    \acro{SN}{discrete ordinates}
+    \acro{MOC}{\textit{Method of Characteristics}}
+    \acro{LC}{\textit{Linear Characteristics}}
+    \acro{SC}{\textit{Step Characteristic}}
+    \acro{DFEM}{\textit{Discontinuous Finite Element Method}}
+    \acro{DGFEM}{\textit{Discontinuous Galerkin Finite Element Method}}
+    \acro{ESC}{\textit{Extended Step Characteristics}}
+    \acro{SBA}{\textit{Slice Balance Approach}}
 \end{acronym}
