Nick's review of theory section in theory manual

--- a/docs/theorymanual/acronym.tex
+++ b/docs/theorymanual/acronym.tex
@@ -12,4 +12,5 @@
     \acro{DGFEM}{\textit{Discontinuous Galerkin Finite Element Method}}
     \acro{ESC}{\textit{Extended Step Characteristics}}
     \acro{SBA}{\textit{Slice Balance Approach}}
+    \acro{CT}{\textit{Characteristic Tetrahedron}}
 \end{acronym}
