Updates to manuals for v1.0.0

--- a/docs/developermanual/main.tex
+++ b/docs/developermanual/main.tex
@@ -47,7 +47,7 @@
 \usepackage{booktabs}
 \usepackage{titlesec}
 
-\title{THOR Developer's Manual}
+\title{THOR Developer's Manual (NOT YET CONSIDERED RELEASED!)}
 \newcommand{\subtitle}{}
 \newcommand{\shortTitle}{THOR Developer's Manual}
 \author[1]{Nicholas Herring}
@@ -61,7 +61,7 @@
 \affil[3]{Los Alamos National Laboratory}
 \affil[4]{Studsvik Scandpower}
 
-\newcommand{\publicationDate}{03/16/2022}
+\newcommand{\publicationDate}{09/07/2022}
 
 
 %customize hyperref
