--- a/docs/developermanual/title.tex
+++ b/docs/developermanual/title.tex
@@ -2,9 +2,9 @@
 
    \BgThispage
    \thispagestyle{firststyle}
-   
+
    \vspace*{\fill}
-   
+
    \begin{minipage}[l][][c]{0.6\textwidth}
    \begin{flushleft}
    \makeatletter
@@ -21,23 +21,23 @@
    % Authors
    {\Large\bf\setlength{\parskip}{10pt}
    \@author
-   
+
    }
    \vspace*{30pt}
    {\huge\bf
    \publicationDate
    }
    \makeatother
-   
-   
+
+
    \end{flushleft}
    \end{minipage}
-   
+
    \vspace*{\fill}
 
 \vspace{1cm}
 
-   
+
    \end{titlepage}
 
    \pagestyle{fancy}
@@ -50,17 +50,17 @@
    \caption*{\Large\bfseries{Revision Log}}
    \begin{tabular}{rrrr}
    \toprule
-   \textbf{Revision} & \textbf{Date} & \textbf{Affected Pages} & \textbf{Revision Description} \\
+   \textbf{Version} & \textbf{Date} & \textbf{Affected Pages} & \textbf{Revision Description} \\
    \midrule
-   0 & 03/16/2022 & All & Initial Release \\
+   1.0.0 & 09/07/2022 & All & Initial Code Release NOT initial DM release \\
    & & & \\
    & & & \\
    \bottomrule
    \end{tabular}
    \end{table}
-   
+
    \vspace*{\fill}
 
    \captionsetup{justification=justified}
-   
+
    \vspace*{\fill}
