--- a/docs/usermanual/title.tex
+++ b/docs/usermanual/title.tex
@@ -50,9 +50,9 @@
    \caption*{\Large\bfseries{Revision Log}}
    \begin{tabular}{rrrr}
    \toprule
-   \textbf{Revision} & \textbf{Date} & \textbf{Affected Pages} & \textbf{Revision Description} \\
+   \textbf{Version} & \textbf{Date} & \textbf{Affected Pages} & \textbf{Revision Description} \\
    \midrule
-   0 & 06/09/2022 & All & Initial Release \\
+   1.0.0 & 09/07/2022 & All & Initial Release \\
    & & & \\
    & & & \\
    \bottomrule
