--- a/docs/usermanual/main.tex
+++ b/docs/usermanual/main.tex
@@ -50,15 +50,14 @@
 \newcommand{\subtitle}{}
 \newcommand{\shortTitle}{THOR User's Manual}
 \author[1]{Nicholas Herring}
-\author[2]{Raffi Yessayan}
-\author[3]{Sebastian Schunert}
-\author[4]{Rodolfo Ferrer}
+\author[1]{Raffi Yessayan}
+\author[2]{Sebastian Schunert}
+\author[3]{Rodolfo Ferrer}
 \author[1]{Yousry Azmy}
 
 \affil[1]{North Carolina State University}
-\affil[2]{Los Alamos National Laboratory}
-\affil[3]{Idaho National Laboratory}
-\affil[4]{Studsvik Scandpower}
+\affil[2]{Idaho National Laboratory}
+\affil[3]{The Pennsylvania State University}
 
 \newcommand{\publicationDate}{09/07/2022}
 
