--- a/docs/developermanual/main.tex
+++ b/docs/developermanual/main.tex
@@ -51,15 +51,14 @@
 \newcommand{\subtitle}{}
 \newcommand{\shortTitle}{THOR Developer's Manual}
 \author[1]{Nicholas Herring}
-\author[1]{Yousry Azmy}
+\author[1]{Raffi Yessayan}
 \author[2]{Sebastian Schunert}
-\author[3]{Raffi Yessayan}
-\author[4]{Rodolfo Ferrer}
+\author[3]{Rodolfo Ferrer}
+\author[1]{Yousry Azmy}
 
 \affil[1]{North Carolina State University}
 \affil[2]{Idaho National Laboratory}
-\affil[3]{Los Alamos National Laboratory}
-\affil[4]{Studsvik Scandpower}
+\affil[3]{The Pennsylvania State University}
 
 \newcommand{\publicationDate}{09/07/2022}
 
