--- a/docs/usermanual/title.tex
+++ b/docs/usermanual/title.tex
@@ -48,13 +48,14 @@
    \begin{table}[H]
    \centering
    \caption*{\Large\bfseries{Revision Log}}
-   \begin{tabular}{rrrr}
+   \begin{tabular}{rrr}
    \toprule
-   \textbf{Version} & \textbf{Date} & \textbf{Affected Pages} & \textbf{Revision Description} \\
+   \textbf{Version} & \textbf{Date}& \textbf{Revision Description} \\
    \midrule
-   1.0.0 & 09/07/2022 & All & Initial Release \\
-   & & & \\
-   & & & \\
+   1.0.0 & 09/07/2022 & Initial Release \\
+   1.0.1 & 09/27/2022 & Added Description of \verb"nonu" option and restricted the source input format. \\
+   & & \\
+   & & \\
    \bottomrule
    \end{tabular}
    \end{table}
