--- a/docs/usermanual/title.tex
+++ b/docs/usermanual/title.tex
@@ -54,6 +54,7 @@
    \midrule
    1.0.0 & 09/07/2022 & Initial Release \\
    1.0.1 & 09/27/2022 & Added Description of \verb"nonu" option and restricted the source input format. \\
+   1.0.2 & 09/28/2022 & Added eigenvalue output to CSV file. \\
    & & \\
    & & \\
    \bottomrule
