--- a/docs/theorymanual/main.tex
+++ b/docs/theorymanual/main.tex
@@ -242,11 +242,11 @@ contents={%
 
 \input{chapters/introduction/main.tex}
 
-\chapter{Theory}
+\chapter{AHOT-C-UG Theory}
 
 \input{chapters/theory/main.tex}
 
-\chapter{Adjoint}
+\chapter{Adjoint Theory}
 
 \input{chapters/adjoint/main.tex}
 
