Added description of SNAP-BeRP tutorial in user's manual

--- a/docs/usermanual/biblio.bib
+++ b/docs/usermanual/biblio.bib
@@ -252,4 +252,11 @@ year = {2009}
     Publisher = {North Carolina State University, Raleigh, North Carolina},
 	Year = {2022}}
 
-
+@techreport{snapdetector,
+	Author = {Moss, Calvin Elroy and Gonzales, Samuel M. and Myers, William L. and Nelson, Mark Andrew and Rothrock, Richard Brian and Salazar, Samuel A. and Sorensen, Eric Byron and Sundby, Gary M.},
+	Title = {Revised SNAP III Training Manual},
+    Institution={Los Alamos National Laboratory},
+    place = {United States},
+number= {LA-UR-17-30627},
+doi = {10.2172/1409806},
+    year={2017}}s
