Added 3D BEAVRS tutorial

--- a/docs/usermanual/biblio.bib
+++ b/docs/usermanual/biblio.bib
@@ -260,3 +260,10 @@ year = {2009}
 number= {LA-UR-17-30627},
 doi = {10.2172/1409806},
     year={2017}}s
+
+@inproceedings{BEAVRS,
+	Author = {N. Horelik and B. Herman and B. Forget and K. Smith},
+	Title = {Benchmark for Evaluation and Validation of Reactor Simulations (BEAVRS), v1.0.1.},
+    organization={\textit{ANS M\&C 2013}},
+    address={Sun Valley, ID},
+    year={2013}}
