Added OpenMC reference

--- a/docs/usermanual/biblio.bib
+++ b/docs/usermanual/biblio.bib
@@ -267,3 +267,12 @@ doi = {10.2172/1409806},
     organization={\textit{ANS M\&C 2013}},
     address={Sun Valley, ID},
     year={2013}}
+
+@article{openmc,
+Author = {Paul K. Romano and Nicholas E. Horelik and Bryan R. Herman and Adam G. Nelson and Benoit Forget and Kord Smith},
+Journal = {Annals of Nuclear Energy},
+Pages = {90--97},
+Title = {OpenMC: A state-of-the-art Monte Carlo code for research and development},
+Volume = {82},
+  doi = {https://doi.org/10.1016/j.anucene.2014.07.048},
+Year = {2015}}
